--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,15 +30,28 @@ android {
         versionName = flutter.versionName
     }
 
-    buildTypes {
+     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.debug
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    // buildTypes {
+    //     release {
+    //         // TODO: Add your own signing config for the release build.
+    //         // Signing with the debug keys for now, so `flutter run --release` works.
+    //         signingConfig = signingConfigs.debug
+    //     }
+    // }
 }
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    implementation 'com.google.errorprone:error_prone_annotations:2.10.0' // or the latest version
+    implementation 'javax.annotation:javax.annotation-api:1.3.2' // or the latest version
 }
